--- a/src/components/HeatMap/HeatMap.module.css
+++ b/src/components/HeatMap/HeatMap.module.css
@@ -2,9 +2,11 @@
     box-sizing: border-box;
     border: 5px;
     box-align: center;
-    border-color: black;
-    background-color: cornsilk;
-    margin: 3px;
+    margin: 0 auto;
     flex-direction: row;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: 50px;
 }
