--- a/src/container/MainDisplay.module.css
+++ b/src/container/MainDisplay.module.css
@@ -1,9 +1,9 @@
 .MainDisplay{
-    width: 100%;
-    margin: auto;
-    height: 300px;
+    width: 1940px;
+    height: 940px;
     overflow: hidden;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
+    background-color: rgb(101, 157, 209);
 }
